  * add dh, dh_auto_install, dh_auto_clean, dh_auto_configure,
    dh_auto_install, dh_auto_test, dh_bugfiles, dh_icons, dh_installifupdown,
    dh_installudev, dh_lintian, dh_prep into po4a.cfg manpages list
  
  [ Joey Hess ]
  * dh_perl: Do not look at perl scripts under /usr/share/doc.
    Closes: #546683
  * Allow dpkg-architecture to print errors to stderr. Closes: #548636

 -- Joey Hess <joeyh@debian.org>  Tue, 15 Sep 2009 13:18:35 -0400

debhelper (7.4.2) unstable; urgency=low

  * Man page typo. Closes: #545443
  * dh: Remove duplicate dh_installcatalogs list. Closes: #545483
    (It was only run once due to logging.)
  * dh_installdocs: Add --link-doc option that can be used to link
    documentation directories. This is easier to use and more flexible
    than the old method of running dh_link first to make a broken symlink.
    Closes: #545676 Thanks, Colin Watson
  * Reorder dh_pysupport call in dh sequence to come before
    dh_installinit, so the generated postinst script registers
    python modules before trying to use them. Closes: #546293
  * dh_installudev: With --name, install debian/<package>.<name>.udev
    to rules.d/<priority>-<name>, the same as debian/<name>.udev
    is installed for the first package. Closes: #546337

 -- Joey Hess <joeyh@debian.org>  Mon, 14 Sep 2009 15:46:49 -0400

debhelper (7.4.1) unstable; urgency=low

  [ Steve Langasek ]
  * dh_installinit: Support upstart job files, and provide compatibility
    symlinks in /etc/init.d for sysv-rc implementations.  Closes: #536035.

  [ Joey Hess ]
  * Add FILES sections to man pages. Closes: #545041 
  * dh_prep(1): Clarify when it should be called. Closes: #544969

 -- Joey Hess <joeyh@debian.org>  Sun, 06 Sep 2009 18:44:40 -0400

debhelper (7.4.0) unstable; urgency=low

  * Optimise -s handling to avoid running dpkg-architecture if a package
    is arch all. This was, suprisingly, the only overhead of using the -s
    flag with arch all/any packages.